fix: Fix bullets, tweak primary color in dark mode

--- a/packages/react/src/components/Skeleton/skeleton.module.css
+++ b/packages/react/src/components/Skeleton/skeleton.module.css
@@ -10,7 +10,7 @@
   background: linear-gradient(
     90deg,
     transparent 0%,
-    rgba(255, 255, 255, 0.3) 50%,
+    var(--t-skeleton-shimmer) 50%,
     transparent 100%
   );
   animation: shimmer 1.5s infinite;
